--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       src: url("font/Arial MT W04 Medium.woff.ttf");
     }
     @font-face {
-      font-family: 支付宝;
-      src: url("font/支付宝.ttf");
+      font-family: PlumbMediumC;
+      src: url("font/PlumbMediumC.ttf");
     }
     .list-box::-webkit-scrollbar {
       width: 10px;
@@ -302,10 +302,10 @@
 
     <div style="position: absolute;right: 98px; top:1754px;color: rgb(0,0,0);">
       <div contenteditable class="textX34" style="font-weight:600; font-family: 招商字体;display: inline-block;font-size: 49px; ">619.22</div>
-      <div contenteditable class="" style="font-weight:600; font-family: 支付宝;display: inline-block;font-size: 46px;margin-left: -2px;">USDT</div>
+      <div contenteditable class="" style="font-weight:600; font-family: PlumbMediumC;display: inline-block;font-size: 46px;margin-left: -2px;">USDT</div>
     </div>
 
-    <div contenteditable class="textX35" style="font-weight:600; font-family: 支付宝;position:absolute;display: inline-block;right: 98px; top:1883px;color: rgb(0,0,0);font-size: 44px;">TRX</div>
+    <div contenteditable class="textX35" style="font-weight:600; font-family: PlumbMediumC;position:absolute;display: inline-block;right: 98px; top:1883px;color: rgb(0,0,0);font-size: 44px;">TRX</div>
 
   </div>
 </div>
